--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "author": "Denise Case",
   "dependencies": {
     "config": "latest",
+    "consolidate": "^0.15.1",
+    "ejs": "^2.7.1",
     "express": "latest",
+    "express-ejs-layouts": "^2.5.0",
     "lodash": "latest",
     "lodash.find": "latest",
     "mongoose": "latest",
